# stratos

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: init_db.py  run_manual.py  seed_competitors.py
stratos/: .env.example  config.py  logging_config.py  retry.py
stratos/agents/: __init__.py  analyst.py  orchestrator.py  scout.py  strategist.py  writer.py
stratos/api/: __init__.py  auth.py  dashboard.py  main.py  websocket.py
stratos/db/: __init__.py  models.py  repositories.py  session.py
stratos/eval/: metrics.py
stratos/llm/: __init__.py  factory.py  providers.py
stratos/memory/: embeddings.py  vector_store.py
stratos/scheduler/: __init__.py  job.py
stratos/tools/: __init__.py  diff.py  dom_parser.py  rss_parser.py  scraper.py
tests/: conftest.py  test_analyst.py  test_auth.py  test_health.py  test_metrics.py  test_scout.py  test_tools.py
