[project]
name = "stratos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.137.1",
    "firecrawl-py>=4.28.3",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ruff>=0.15.17",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
